@@ -1,9 +1,8 @@
 package com.sudoku.view;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.FloatBuffer;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 
 import org.joml.Matrix3f;
 import org.joml.Matrix4f;
@@ -51,7 +50,13 @@ public class Shader {
     public Shader(String filepath) {
         this.filepath = filepath;
         try {
-            String source = new String(Files.readAllBytes(Paths.get(filepath)));
+            InputStream is = Shader.class.getResourceAsStream(filepath);
+
+            if (is == null) {
+                throw new RuntimeException("Shader not found: " + filepath);
+            }
+
+            String source = new String(is.readAllBytes());
             String[] splitString = source.split("(#type)( )+([a-zA-Z]+)");
 
             // Find the first pattern after #type 'pattern'
